[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaosmonkey-cli"
version = "0.1.0"
description = "CLI orchestration layer for Nomad-driven Chaos Toolkit experiments"
readme = "README.md"
authors = [{ name = "ChaosMonkey Team" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13,<14",
    "chaostoolkit-lib>=1.42,<2.0",
    "python-nomad>=2.1,<3.0",
    "pydantic>=2.6,<3.0",
    "flask>=3.0,<4.0",
    "flask-cors>=4.0,<5.0",
    "requests>=2.31,<3.0",
    "redis>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "weasyprint>=60.0,<62.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5.0,<0.6.0",
    "pyvmomi>=8.0,<9.0",
    "ovirt-engine-sdk-python>=4.6,<5.0",
    "prometheus-api-client"
]

[project.scripts]
chaosmonkey = "chaosmonkey.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"chaosmonkey.experiments" = ["templates/*.json"]

[tool.ruff]
line-length = 100
